fix a layout bug

--- a/Blackjack.Web/Content/Blackjack.less
+++ b/Blackjack.Web/Content/Blackjack.less
@@ -14,7 +14,6 @@
 header {
     background-color: @background-black;
     height: 2em;
-    width: 100%;
     margin: auto;
     padding: 0.5em;
 
@@ -22,14 +21,12 @@ header {
         font-size: 1.5em;
         float: left;
         width: 25%;
-        height: 3em;
     }
 
     .new-players {
         width: 55%;
         text-align: center;
         float: left;
-        height: 3em;
         padding-top: 0.5em;
     }
 
@@ -37,7 +34,6 @@ header {
         font-size: 1em;
         float: left;
         width: 18%;
-        height: 3em;
         padding-top: 0.5em;
     }
 }
